Restore HH:MM inputs and numeric keyboard

--- a/index.html
+++ b/index.html
@@ -51,23 +51,15 @@
     </div>
     <div class="block">
       <h2>Elapsed Time <button class='small-reset' onclick='confirmClearElapsed()'>❌</button></h2>
-        <div class="time-row">
-          <input id="startHour" class="time-input" type="text" inputmode="numeric" pattern="\d*" maxlength="2" placeholder="HH" oninput="autoTab(this, 'startMin'); saveInput(this)">
-          <span class="time-sep">:</span>
-          <input id="startMin" class="time-input" type="text" inputmode="numeric" pattern="\d*" maxlength="2" placeholder="MM" oninput="autoTab(this, 'endHour'); saveInput(this)">
-        </div>
-        <div class="time-row">
-          <input id="endHour" class="time-input" type="text" inputmode="numeric" pattern="\d*" maxlength="2" placeholder="HH" oninput="autoTab(this, 'endMin'); saveInput(this)">
-          <span class="time-sep">:</span>
-          <input id="endMin" class="time-input" type="text" inputmode="numeric" pattern="\d*" maxlength="2" placeholder="MM" oninput="limitDigits(this); saveInput(this)">
-        </div>
+      <input id="startTime" type="text" inputmode="numeric" pattern="[0-9:]*" maxlength="5" placeholder="Start HH:MM" oninput="handleTimeInput(this, 'endTime'); saveInput(this)">
+      <input id="endTime" type="text" inputmode="numeric" pattern="[0-9:]*" maxlength="5" placeholder="End HH:MM" oninput="handleTimeInput(this); saveInput(this)">
       <button class="full-width" onclick="calculateElapsedTime()">Calculate</button>
       <div class="output" id="elapsedResult">Elapsed Time: 0.00 hrs</div>
     </div>
     <div class="block">
       <button class="reset-big" onclick="confirmResetAll()">Reset All</button>
     </div>
-    <div class="version">v1.0.1</div>
+    <div class="version">v1.0.13</div>
   </div>
 </body>
 </html>
