--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </div>
     <div class="block">
       <h2>Elapsed Time <button class='small-reset' onclick='confirmClearElapsed()'>❌</button></h2>
-      <input id="startTime" type="tel" inputmode="numeric" pattern="\d*" maxlength="4" placeholder="Start HHMM" oninput="handleHHMMInput(this, 'endTime'); saveInput(this)">
-      <input id="endTime" type="tel" inputmode="numeric" pattern="\d*" maxlength="4" placeholder="End HHMM" oninput="handleHHMMInput(this); saveInput(this)">
+      <input id="startTime" type="tel" inputmode="numeric" maxlength="5" placeholder="Start HH:MM" oninput="handleTimeInput(this, 'endTime'); saveInput(this)">
+      <input id="endTime" type="tel" inputmode="numeric" maxlength="5" placeholder="End HH:MM" oninput="handleTimeInput(this); saveInput(this)">
       <button class="full-width" onclick="calculateElapsedTime()">Calculate</button>
       <div class="output" id="elapsedResult">Elapsed Time: 0.00 hrs</div>
     </div>
