--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </div>
     <div class="block">
       <h2>Elapsed Time <button class='small-reset' onclick='confirmClearElapsed()'>❌</button></h2>
-      <input id="elapsedStart" type="tel" inputmode="numeric" maxlength="5" placeholder="Start HHMM" oninput="handleTimeInput(this); saveInput(this)">
-      <input id="elapsedEnd" type="tel" inputmode="numeric" maxlength="5" placeholder="End HHMM" oninput="handleTimeInput(this); saveInput(this)">
+      <input id="elapsedStart" type="time" step="60" oninput="saveInput(this)">
+      <input id="elapsedEnd" type="time" step="60" oninput="saveInput(this)">
       <button class="full-width" onclick="calculateElapsedTime()">Calculate</button>
       <div class="output" id="elapsedResult">Elapsed Time: 0.00 hrs</div>
     </div>
