Add version footer

--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
       <button class="reset-big" onclick="confirmResetAll()">Reset All</button>
     </div>
   </div>
+  <footer class="version">Version 1.3</footer>
 </body>
 </html>
