--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <div class="block">
       <h2>Switch Tanks Timer <button class='small-reset' onclick='resetSwitchTankTimer()'>🔄</button></h2>
+      <label><input type="checkbox" id="linkSwitchToFlight"> Link to Flight Timer</label>
       <div class="output" id="switchTankTime">Next Tank Switch: 30:00</div>
     </div>
     <div class="block">
@@ -64,6 +65,6 @@
       <button class="reset-big" onclick="confirmResetAll()">Reset All</button>
     </div>
   </div>
-  <footer class="version">Version 1.5</footer>
+  <footer class="version">Version 1.6</footer>
 </body>
 </html>
